# GCQ_test

./: index.php  pyproject.toml  requirements.txt
br/source/: conf.py  gcq.rst  index.rst  ket.rst  projeto.rst  publicacoes.rst  qc.rst  qubox.rst
br/source/_static/math/order_finding/: mod_exp.rst  u_operator.rst
br/source/_static/math/phase_estimation/: first_register.rst  first_register_bin.rst  t_value.rst
br/source/_static/math/qft/: bin_fraction.rst  discrete_transform.rst  equivalence.rst  euler.rst  notation.rst  product_repr.rst  product_repr_examples.rst  qft.rst  qft_arbitrary.rst  qft_examples.rst  rk_transform.rst
br/source/algoritmos/: index.rst
br/source/algoritmos/factoring/: index.rst
br/source/algoritmos/grover/: exercicio.rst  index.rst  pratica.ipynb  solucao.ipynb
br/source/algoritmos/order_finding/: index.rst
br/source/algoritmos/phase_estimation/: index.rst
br/source/algoritmos/qft/: index.rst
en/: Makefile  make.bat
en/source/: _static  conf.py  gcq.rst  img  index.rst  ket.rst  projeto.rst  qc.rst  qubox.rst
